# tax-automation

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt  streamlit_app.py
.claude/: settings.local.json
.streamlit/: config.toml
config/: categories.yaml  rules.yaml
config/card_profiles/: epos.yaml  generic.yaml  gougin.yaml  rakuten.yaml  smbc.yaml
src/tax_automation/: __init__.py  cache.py  cli.py  config.py  matcher.py  models.py  pipeline.py  receipt_scanner.py  unified_pipeline.py
src/tax_automation/categorizers/: __init__.py  gemini.py  rule_based.py
src/tax_automation/exporters/: csv_exporter.py  freee_exporter.py
src/tax_automation/parsers/: __init__.py  csv_parser.py  profile_detector.py
tests/: conftest.py  test_csv_parser.py  test_gemini_categorizer.py  test_models.py  test_rule_based.py
tests/fixtures/: sample_generic.csv
